--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,40 @@
   color: #61dafb;
 }
 
+.App-button {
+
+}
+
+.metamask-button {
+  width: 200px;
+  border-radius: 5px;
+  background-color: #307081;
+  padding: 3px;
+  margin: 0 auto;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.metamask-button:hover {
+  background-color: #245664;
+}
+
+.metamask-logo {
+  width: 28px;
+  height: 28px;
+}
+
+.metamask-button-label {
+  vertical-align: super;
+  text-shadow: #282c34;
+}
+
+.p {
+  padding: 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
